[package]
name = "rocket_csrf"
description = "Rocket fairing and guard for csrf protection"
version = "0.1.0"
authors = ["Trinity Pointard <trinity.pointard@insa-rennes.fr>"]
repository = "https://github.com/fdb-hiroshima/rocket_csrf"
readme = "README.md"
license = "GPL-3.0"
keywords = ["rocket", "csrf", "security"]

[dependencies]
csrf = "~0.3.0"
data-encoding = "~2.1.1"
rand = "~0.6.1"
rocket = "0.4.0-rc.1"
serde = "~1.0"
time = "~0.1.40"
