[package]
name = "rocket_csrf"
description = "Rocket fairing and guard for csrf protection"
version = "0.1.0"
authors = ["Trinity Pointard <trinity.pointard@insa-rennes.fr>"]
repository = "https://github.com/fdb-hiroshima/rocket_csrf"
readme = "README.md"
license = "GPL-3.0"
keywords = ["rocket", "csrf", "security"]
edition = "2021"

[dependencies]
data-encoding = "~2.1.1"
ring = "~0.13.5"
rocket = "0.5.0-rc.2"
serde = "~1.0"
time = "~0.1.40"
tokio = "1.18.2"
